fx ui added for further operations